src/github.com/ebay/akutan/query/parser/testdata/select/distinct/errors/count_distinct.bql
SELECT 
 (count(?rim) AS ?rims) DISTINCT
WHERE {
    ?rim rdf:type products:rims
    ?rim <size> ?sz
}
